--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,1 +1,13 @@
 @use './bootstrap';
+
+#app {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.app-container {
+  width: 100%;
+  max-width: 720px;
+}
