--- a/src/assets/bootstrap.scss
+++ b/src/assets/bootstrap.scss
@@ -2,3 +2,8 @@ $headings-font-weight: 700;
 $font-family-base: 'Nunito', sans-serif;
 
 @import 'bootstrap/scss/bootstrap';
+
+.nav-tabs {
+  padding: 0.5em 0.5em 0;
+  background-color: rgba(0, 0, 0, 0.03);
+}
