--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,10 +1,25 @@
-@use './bootstrap';
+$headings-font-weight: 700;
+$font-family-base: 'Nunito', sans-serif;
+
+@import 'bootstrap/scss/bootstrap';
+
+.nav-tabs {
+  padding: 0.5em 0.5em 0;
+  background-color: rgba(0, 0, 0, 0.03);
+}
 
 #app {
   height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
+
+  @include media-breakpoint-up(sm) {
+    align-items: center;
+  }
+
+  @include media-breakpoint-down(sm) {
+    margin-top: 1rem;
+  }
 }
 
 .app-container {
